# scsi_obsolete

./: .gitignore  LIST_OF_CHANGES.txt  Makefile.am  README.txt  back_up_scsi.sh  bootstrap  cmd.sh  configure  configure.in  make_scsi.sh  scsi.files  scsi.includes
scsi_src/: Makefile.am
scsi_src/ctypes/: pyscsi.py  scsi.py
scsi_src/glps/: CMakeLists.txt  Makefile.am  README  glps.c  glpserror.h  glpsutil.cc  glpsutil.h  latio.cc  parser.y  tracy_1.lat  tracy_2.lat
scsi_src/inc/: complexe_naff.h  complexeheader_naff.h  ety.h  fft.h  field.h  gslport.h  lsoc.h  mathlib.h  modnaff.h  nsls-ii_lib.h  pascalio.h  physlib.h  prtmfile.h  radia2scsi.h  rdmfile.h  scsi.h  scsi_global.h  scsi_lib.h  soleillib.h  t2cell.h  t2elem.h  t2lat.h  t2ring.h  t3lat.h  tpsa_for.h  tpsa_for_pm.h  usr_lib.h
scsi_src/lattice_parser/glps/: AUTHORS  cmd.sh  glps.c  glpslat.cc  glpsutil.cc  glpsutil.h.modi  latio.h  parser.y  scanner.l
scsi_src/misc/Simon/: m4-20121107-430-bare.lat  m4_1.cc  m4_2.cc  nsls-ii_lib.cc
scsi_src/misc/Yun/: beambeam.cpp  for_check.cpp  m4.cc  temp_spin.cpp
scsi_src/python/: Makefile.am  ele2tracy.py  plt_opt.py  pyscsi.i  python_api.i  scsi.py  shared_lib.sh  tst.py  unit_test.py
scsi_src/src/: Makefile.am  eigenv.cc  ety.cc  field.cc  gslport.cc  lsoc.cc  mathlib.cc  modnaff.cc  naffutils.cc  nsls-ii_lib.cc  pascalio.cc  physlib.cc  prtmfile.cc  radia2scsi.cc  rdmfile.cc  scsi.cc  scsi_lib.cc  scsi_ptc_lib.cc  shared_lib.sh  soleillib.cc  t2cell.cc  t2elem.cc  t2elem_corr.cc  t2lat.cc  t2ring.cc  t3lat.cc  tpsa_for_pm.cc  tpsa_lin.cc  tpsa_lin_pm.cc  usr_lib.cc
scsi_src/src/glps/: COPYING  elemtree.c  elemtree.h  glps.h  glpserror.c  glpsutil.cc  glpsutil.h
