lib_LIBRARIES       = libpyscsi.a
#lib_LTLIBRARIES     = libpyscsi.la

libpyscsi_a_SOURCES = pyscsi_wrap.cxx

INCLUDES = -I../inc -I/usr -I/usr/include/python2.6

CXXFLAGS = -g -O0 -Wall -Wno-error=all -fno-implicit-templates -fPIC -shared
#LDFLAGS = -shared -fPIC
#CXXFLAGS = -g -O0 -Wall -Wno-error=all -fno-implicit-templates -fPIC
#CXXFLAGS = -pg -O2 -Wall -fno-implicit-templates -fPIC
#CXXFLAGS = -g -O2 -Wall -frepo
